refactor: 컨플릭트 합병 후 보정 및 이미지 저장 경로를 상대경로로 수정